--- a/index.html
+++ b/index.html
@@ -8,49 +8,112 @@
 </head>
 <body>
 
-    <img src="assets1/logotransparent.png" alt="Apex Office Solutions Logo" class="logo">
-  <!-- Hero Section -->
-  <header class="hero">
-    <div class="hero-content">
-      <h1>Apex Office Solutions</h1>
-      <p>
-        Elevate your workspace with smart, modern office solutions
-        designed to maximize efficiency and productivity.
-      </p>
-      <div class="buttons">
-        <a href="#contact" class="btn btn-primary">Get a Quote</a>
-        <a href="#services" class="btn btn-secondary">Explore Services</a>
+  <!-- NAVBAR -->
+  <nav class="navbar">
+    <h2 class="logo">Apex Office Solutions</h2>
+    <div class="nav-links">
+      <a onclick="showPage('home')">Home</a>
+      <a onclick="showPage('about')">About Us</a>
+      <a onclick="showPage('contact')">Contact Us</a>
+    </div>
+  </nav>
+
+  <!-- HOME -->
+  <div id="home" class="page active">
+
+    <!-- HERO -->
+    <header class="hero">
+      <div class="hero-content">
+        <div class="logo">
+  <img src="assets1/logotransparent.png" alt="Apex Logo" />
+</div>
+        <h1>Apex Office Solutions</h1>
+        <p>
+          Elevate your workspace with smart, modern office solutions
+          designed to maximize efficiency and productivity.
+        </p>
+        <div class="buttons">
+          <a onclick="showPage('contact')" class="btn btn-primary">Get a Quote</a>
+          <a onclick="scrollToServices()" class="btn btn-secondary">Explore Services</a>
+        </div>
       </div>
-    </div>
-  </header>
+    </header>
 
-  <!-- About Section -->
-  <section class="section">
-    <h2>About Us</h2>
-    <p>
-      Apex Office Solutions provides innovative and reliable office systems,
-      workspace optimization, and technology solutions to help businesses
-      perform at their peak.
-    </p>
-  </section>
+    <!-- ABOUT PREVIEW -->
+    <section class="section">
+      <h2>Who We Are</h2>
+      <p>
+        Apex Office Solutions is a professional service company focused on delivering reliable administrative, payroll, and office management solutions for growing organizations. We aim to streamline internal processes, reduce human error, and improve operational efficiency through organized systems and modern technology.
+      </p>
+    </section>
 
-  <!-- Services Section -->
-  <section class="section light" id="services">
-    <h2>Our Services</h2>
-    <div class="services">
-      <div class="card">Office Design & Setup</div>
-      <div class="card">IT & Technology Solutions</div>
-      <div class="card">Office Supplies Procurement</div>
-      <div class="card">Workspace Consulting</div>
-    </div>
-  </section>
+    <!-- SERVICES -->
+    <section class="section light" id="services">
+      <h2>What We Do</h2>
+      <div class="services">
+        <div class="card">Payroll Management and Salary Computation</div>
+        <div class="card">Employee Records Management</div>
+        <div class="card">Administrative Support Services</div>
+        <div class="card">Office Operations Assistance</div>
+      </div>
+    </section>
 
-  <!-- Contact Section -->
-  <section class="section" id="contact">
-    <h2>Let’s Work Together</h2>
-    <p>Email: contact@apexofficesolutions.com</p>
-    <p>Phone: +63 9XX XXX XXXX</p>
-  </section>
+    <!-- FOUNDERS -->
+    <section class="section">
+      <h2>The Founders</h2>
+      <div class="founders">
+        <div class="founder-card">
+          <img src="assets1/founder11.jpg" alt="Founder 1">
+          <h3>Andrea R. Delos Reyes</h3>
+          <p>Wow</p>
+        </div>
+        <div class="founder-card">
+          <img src="assets1/founder22.jpg" alt="Founder 2">
+          <h3>Felicity Ania Marie M. Eclarinal</h3>
+          <p>Wow</p>
+        </div>
+      </div>
+    </section>
+
+  </div>
+
+  <!-- ABOUT PAGE -->
+  <div id="about" class="page">
+    <section class="section">
+      <h2>About Apex Office Solutions</h2>
+      <p>
+        We are an IT-driven office solutions company focused on delivering
+        efficient, scalable, and modern systems for businesses of all sizes.
+      </p>
+
+      <div class="about-grid">
+        <div class="card">
+          <h3>Our Mission</h3>
+          <p>Our mission is to provide accurate, secure, and efficient office solutions that support businesses in managing their employees, payroll, and records with confidence and ease.</p>
+        </div>
+        <div class="card">
+          <h3>Our Vision</h3>
+          <p>We envision becoming a trusted partner for organizations by offering scalable and dependable office systems that adapt to future business needs and technological advancements.</p>
+        </div>
+      </div>
+    </section>
+  </div>
+
+  <!-- CONTACT PAGE -->
+  <div id="contact" class="page">
+    <section class="section">
+      <h2>Get in Touch</h2>
+      <p>Email: support@apexofficesolutions.com</p>
+      <p>Phone: +63 912 345 6789</p>
+
+      <form class="contact-form">
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email" required>
+        <textarea placeholder="Your Message" required></textarea>
+        <button class="btn btn-primary" type="submit">Send Message</button>
+      </form>
+    </section>
+  </div>
 
   <script src="script.js"></script>
 </body>
